--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,54 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+/* 
+
+.center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 }
+
+.center-text {
+  font-size: medium;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+
+.product {
+  color: #8b0000;
+  font-weight: 500;
+  border-radius: 10%;
+  border-style: solid;
+  border-width: 2px;
+  margin: 10px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 8vw;
+  height: 20vh;
+}
+
+.success {
+  color: green;
+  background: lightblue;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  margin-inline: 30vw;
+}
+
+.error {
+  color: red;
+  background: lightblue;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  margin-inline: 30vw;
+} */
